# batch-review-mcp

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  server.json
.codex/: config.toml
.cursor/: mcp.json
.gemini/: settings.json
.githooks/: pre-commit
backend/: _dev_entry.py  app.py  comment_staleness.py  mcp_tools.py  models.py  state.py
docs/: README.html
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
mcpb/: manifest.json
scripts/: build_mcpb.py  capture_screenshot.py  session_history_metadata.py  test_mcp_client.py  update_server_json_mcpb_sha.py  verify_release_mcp_registry.py
session_history/: 2026-04-15_agentsmd-precommit-session-history.md  2026-04-15_auto-load-review-json-on-startup.md  2026-04-15_center-panel-reload-open-file-refresh.md  2026-04-15_clear-all-button-style.md  2026-04-15_clear-all-comments-ui-mcp.md  2026-04-15_comment-outdated-staleness.md  2026-04-15_delete-outdated-button.md  2026-04-15_doc-default-open-browser.md  2026-04-15_editor-parity-scrollbars-diff-comment.md  2026-04-15_gh-release-create-v0.1.0.md  2026-04-15_github-release-workflow.md  2026-04-15_image-review-and-ui-improvements.md  2026-04-15_initial-implementation.md  2026-04-15_mcp-get-review-web-url.md  2026-04-15_mcp-host-configs-and-stdio-fix.md  2026-04-15_mcp-mode-open-browser.md  2026-04-15_mcp-official-registry-metadata.md  2026-04-15_mcp-resource-server-urls.md  2026-04-15_mcp-session-init-gate.md  2026-04-15_mcp-tools-expansion.md  2026-04-15_mcpb-github-release-distribution.md  2026-04-15_pypi-packaging-and-release-freeze.md  2026-04-15_pyproject-urls-readme-clone.md  2026-04-15_readme-screenshot.md  2026-04-15_release-v0.2.0.md  2026-04-15_release-workflow-mcp-registry-verify.md  2026-04-15_reload-toolbar-clearall-stemfix.md  2026-04-15_right-panel-clear-all-divider.md  2026-04-15_right-panel-full-width-divider-clear-all.md  2026-04-15_right-panel-toolbar-icons.md  2026-04-15_shared-toolbar-icons.md  2026-04-15_staleness-partial-line-strike-ui.md  2026-04-15_trim-mcp-tool-surface.md  2026-04-19_release-v0.3.0.md  (+29 more)
(+29 files in other folders)
