[project]
name = "batch-review-mcp"
version = "0.3.2"
description = "Batch review tool for markdown files and code changes — MCP server + web UI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "fastmcp>=3.0.0",
    "gitpython>=3.1.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "websockets>=12.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
batch-review = "main:cli_main"

[project.urls]
Homepage = "https://github.com/hevangel/batch-review-mcp"
Repository = "https://github.com/hevangel/batch-review-mcp"
Issues = "https://github.com/hevangel/batch-review-mcp/issues"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
# Map repo root so the `backend` package resolves; wheel-only files below.
sources = {"." = ""}

[tool.hatch.build.targets.wheel.force-include]
# Console script `main:cli_main` and startup helpers live at repo root.
"main.py" = "main.py"
# Prebuilt UI (run `npm run build` in frontend/ before `uv build`).
"frontend/dist" = "frontend/dist"

[tool.hatch.build.targets.sdist.force-include]
# Keep sdist aligned so `pip install --no-binary` can rebuild the wheel.
"main.py" = "main.py"
"frontend/dist" = "frontend/dist"
